--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a teacher changing careers</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Corona, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love reading, playing video games, hiking, and hanging out with family</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to be a front end developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Menifee, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It is a field that is in high demand and will allow me to gain an adaptable skill.</p>
     </section>
 
     <footer id="footer">
